+adv-getbyid endpoint
