# models/advertisements.go
@@ -29,8 +29,8 @@ type AdvertisementUpdate struct {
 	Telegram    string `json:"telegram"`
 }
 
-type AdvertisementDelete struct {
-	AdvID int64 `json:"id"`
+type AdvertisementID struct {
+	ID int64 `json:"id"`
 }
 
 type AdvertisementFilter struct {
