# routers/routers.go
@@ -41,6 +41,7 @@ func SetupRouter(server *gin.Engine) *gin.Engine {
 	protected.PATCH("/advertisement-patch", AdvController.AdvPatch)
 	protected.DELETE("/advertisement-delete", AdvController.AdvDelete)
 	protected.GET("/advertisement-getall", AdvController.AdvGetAll)
+	protected.POST("/advertisement-getbyid", AdvController.AdvGetByID)
 	protected.POST("/advertisement-filter", AdvController.AdvGetFiltered)
 
 	protected.Use(middleware.PasswordMiddleware(AuthController))
